<resources>
    <string name="app_name">TiMapp</string>
    <string name="db_name">database_timapp</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_explore">Explore</string>
    <string name="title_activity_post">Post</string>
    <string name="title_activity_place">Event</string>
    <string name="title_activity_incoming">Incoming</string>
    <string name="title_activity_invite_friends">Motivate them</string>
    <string name="title_activity_list_friends">My friends</string>
    <string name="title_activity_invitations">My invitations</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_filter">Filter</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_add_event">Add event</string>
    <string name="title_activity_add_spot">Attach a place</string>
    <string name="title_activity_share_app">Spread the news</string>
    <string name="title_activity_edit_profile">Edit profile</string>
    <string name="title_activity_presentation">What is TiMapp ?</string>
    <string name="title_activity_login">Sign in</string>
    <string name="tab_map">Map</string>
    <string name="tab_list">List</string>
    <string name="default_username">Not logged in</string>
    <string name="add_comment_message">Type here</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log out</string>
    <string name="nav_login">Log in</string>
    <string name="message_broadcast">broadcast</string>
    <string name="button_broadcast">broadcast</string>
    <string name="action_map">Map</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="error_cannot_get_location">Sorry but we cannot get your location! You disappeared from the digital world. Are you a Ninja !?</string>
    <string name="error_credential_invalid">Invalid credential</string>
    <string name="title_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_reload">Reload</string>
    <string name="menu_edit_profile">Edit profile</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_tag_around">Add event</string>
    <string name="nav_my_friends">My friends</string>
    <string name="nav_my_invitations">My invitations</string>
    <string name="nav_share">Get more friends</string>
    <string name="app_id">1634741340120823</string>
    <string name="namespace">timappweb</string>
    <string name="toast_no_space">
You cannot add any space to a tag. To submit one, please press the touch "Done" of your keyboard.
    </string>
    <string name="toast_no_tag">Please add a tag.</string>
    <string name="toast_tag_one_letter">Your tag should have at least 2 letters.</string>
    <string name="toast_too_many_tags_part_one">You cannot add more than&#160;</string>
    <string name="toast_too_many_tags_part_two">&#160;tags.</string>
    <string name="toast_tag_already_chosen">Your tag has already been chosen.</string>
    <string name="toast_thanks_for_sharing">Thank you for sharing !</string>
    <string name="category_music">Music</string>
    <string name="category_strike">Strike</string>
    <string name="category_streetshow">Street show</string>
    <string name="category_sport">Sport</string>
    <string name="category_bar">Bar</string>
    <string name="category_nightclub">Nightclub</string>
    <string name="category_show">Show</string>
    <string name="category_party">Party</string>
    <string name="category_unknown">Else</string>
    <string name="button_add_place">skip</string>
    <string name="create_button">Create</string>
    <string name="search_button">Validate</string>
    <string name="search_button_empty">Clear Filter</string>
    <string name="invite_button">Invite</string>
    <string name="text_activity_locate">Does your event already exist ?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_drawer">Menu</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="action_filter">Filter</string>
    <string name="search_hint">Type a tag</string>
    <string name="mood_location">WORLD</string>
    <string name="exemple_comment">Cet endroit est sympa, surtout
        grâce à Lucia qui s’est mise toute nue sur le bar.</string>
    <string name="hashtag">#</string>
    <string name="please_wait">Please wait</string>
    <string name="waiting_for_location">Getting your location</string>
    <string name="skip">Skip</string>
    <string name="error_server_unavailable">Sorry ours servers are currently unavailable. Please try again later</string>
    <string name="error_require_login">You must be logged in to perform this action</string>
    <string name="error_unkown">Unkown error occured</string>
    <string name="no_network_access_title">No network access</string>
    <string name="hint_searchview_filter">Search</string>
    <string name="addpost_if_no_tag">You don\'t have any tags yet.</string>
    <string name="title_activity_locate">Checking around</string>
    <string name="title_activity_publish">Check and send</string>
    <string name="main_text_publish_activity">CONFIRM</string>
    <string name="text_anonymous">Anonymous</string>
    <string name="hint_event_name">Event name</string>
    <string name="hint_spot_name">Name of the place</string>
    <string name="toast_tiny_text_size">Only one character for a tag ? What did you think ?</string>
    <string name="toast_huge_text_size">That tag was too small. Maybe you should try adding a thousand more letters</string>
    <string name="searchview_hint_no_tags">Type a tag here</string>
    <string name="searchview_hint_few_tags_part_one">You can add up to&#160;</string>
    <string name="searchview_hint_few_tags_part_two">&#160;tags</string>
    <string name="searchview_hint_2">2 tags left</string>
    <string name="searchview_hint_1">One more !</string>
    <string name="loading_tags">Loading tags</string>
    <string name="loading_pictures">Loading pictures</string>
    <string name="loading_posts">Loading people</string>
    <string name="uploading_tags">Uploading tags</string>
    <string name="no_pic">There isn\'t any picture here yet.</string>
    <string name="no_tags">No tags yet.</string>
    <string name="no_people">Nobody has posted here.</string>
    <string name="text_last_post">Last eventPost</string>
    <string name="button_add_tags">Tags</string>
    <string name="button_add_pic">Photos</string>
    <string name="button_add_people">People</string>
    <string name="please_enable_internet">Please make sure your phone has an internet connection and start again.</string>
    <string name="text_no_event_around1">There isn\'t any event near you\nright now.</string>
    <string name="share_place_text">http://Lien_de_la_place</string>
    <string name="share_message_text">Hey, check out this new app that lets you know what\'s going on in your city ! http://www.timappweb.com</string>
    <string name="share_message_subject">TiMapp</string>
    <string name="text_share_activity">TiMapp is even more enjoyable with friends.\nClick the big red button to invite some of your friends.</string>
    <string name="subject_share_activity">Share TiMapp with your friends !</string>
    <string name="checking_around">Please wait while we load the events that already exist here</string>
    <string name="or_text_login">Or</string>
    <string name="text_create_account_login">Create account</string>
    <string name="welcome_to_timapp">Welcome to TiMapp</string>
    <string name="text_tags_left_3">3 tags left</string>
    <string name="text_tags_left_2">2 tags left</string>
    <string name="text_tags_left_1">1 tag left</string>
    <string name="posts_shared">Posts shared</string>
    <string name="events_created">Events created</string>
    <string name="edit_first_profile1">Well done.</string>
    <string name="edit_first_profile2">Your tags will be displayed on your profile.\nAt any time you will be able to change them as you like.</string>
    <string name="place_removed">This event does not exists anymore</string>
    <string name="cannot_load">We cannot load any data.\nCheck your internet connection.</string>
    <string name="cannot_load_profile">We cannot load your profile.\nCheck your internet connection.</string>
    <string name="cannot_load_events">We cannot load the events.\nCheck your internet connection.</string>
    <string name="cannot_load_tags">We cannot load the tags.\nCheck your internet connection.</string>
    <string name="cannot_load_pictures">We cannot load the pictures.\nCheck your internet connection.</string>
    <string name="cannot_load_posts">We cannot load the posts.\nCheck your internet connection.</string>
    <string name="cannot_add_coming_status">Coming Failed. Please Try again later</string>
<string name="create_second_post_delay">You\'ve already added a eventPost a moment ago. Please wait before adding a new one!</string>
    <string name="create_second_place_delay">You\'ve already added a event a moment ago. Please wait before adding a new one!</string>
    <string name="cannot_add_more_friends">You can\'t add more than 10 friends</string>
    <string name="header_coming">On their way</string>
    <string name="header_invited">Friends invited</string>
    <string name="header_here">Here</string>
    <string name="drawer_title1">TiM</string>
    <string name="drawer_title2">App</string>
    <string name="slogan">Find. Enjoy. Share.</string>
    <string name="coming_button">Go</string>
    <string name="on_my_way">On My Way</string>
    <string name="tags_upcoming">Tags upcoming</string>
    <string name="after_create_place_clicked">Thanks for sharing</string>
    <string name="text_no_last_post">Never posted anything</string>
    <string name="define_yourself_tag">DefineYourself</string>
    <string name="newbie_tag">Newbie</string>
    <string name="log_set_adapter_placepeoplefragment">Setting adapter with list of size :</string>
    <string name="menu_search_tags">Search tags</string>
    <string name="no_events_message1">There are no events in this area!</string>
    <string name="uploading_pic">Uploading picture</string>
    <string name="counter_over">Over !</string>
    <string name="loading_friends">Loading friends</string>
    <string name="loading_invitations">Loading invitations</string>
    <string name="define_yourself">Define yourself</string>
    <string name="text_no_invitations">No invitation at the moment</string>
    <string name="title_add_spot">Where are you ?</string>
    <string name="title_add_event">What is it ?</string>
    <string name="no_place_attach">Pin a place</string>
    <string name="add_spot">Add a place</string>
    <string name="where_are_you">Where are you ?</string>
    <string name="sync_account_type">timapp.timappweb.com</string>
    <string name="content_authority_config">com.timappweb.timapp.config.provider</string>
    <string name="content_authority_data">com.timappweb.timapp.data.provider.data</string>
    <string name="post_pics_and_tags">Post pics &amp; tags</string>
    <string name="invite_people">Invite people</string>
    <string name="title_p_five">Share</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Connect</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="submit">Submit</string>
</resources>