<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_community">
        <menu>
            <item android:id="@+id/menu_item_viewpager" android:icon="@drawable/question_mark"
                android:title="@string/nav_how_it_works" />
            <item android:id="@+id/menu_item_explore" android:icon="@android:drawable/ic_dialog_map"
                android:title="@string/title_activity_explore" android:visible="false"/>
            <item android:id="@+id/menu_item_add_event" android:icon="@drawable/plus_grey"
                android:title="@string/title_activity_add_event" />
            <item android:id="@+id/menu_item_my_invitations" android:icon="@android:drawable/ic_dialog_email"
                android:title="@string/title_activity_invitations" />
            <item android:id="@+id/menu_item_my_friends" android:icon="@drawable/ic_people"
                android:title="@string/title_activity_list_friends" />
            <item android:id="@+id/menu_item_share" android:icon="@drawable/ic_social_share"
                android:title="@string/nav_share" />
            <!--
            <item android:remote_id="@+remote_id/layout_spot" android:iconUrl="@android:drawable/ic_menu_send"
                android:title="Spot" />
            <item android:remote_id="@+remote_id/layout_event" android:iconUrl="@android:drawable/ic_menu_send"
                android:title="Event" />
                -->
        </menu>
    </item>

    <item android:title="@string/nav_account">
        <menu>
            <item android:id="@+id/menu_item_profile" android:icon="@drawable/ic_profile"
                android:title="@string/title_activity_profile" />
            <item android:id="@+id/menu_item_settings" android:icon="@drawable/ic_settings"
                android:title="@string/title_activity_settings" />
            <item android:id="@+id/menu_item_logout" android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/nav_logout" />
            <item android:id="@+id/menu_item_login" android:icon="@android:drawable/ic_menu_send"
                android:title="@string/nav_login" />
        </menu>
    </item>

    <item android:title="Development shortcuts">
        <menu>
            <item android:id="@+id/menu_item_dummy_event" android:icon="@drawable/ic_map_light"
                android:title="Dummy event" />
        </menu>
    </item>
</menu>