<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/background_fragment_place">

    <!-- Progress view -->
    <!-- **********************************************************************-->
    <LinearLayout
        android:id="@+id/progress_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="bottom"
        android:orientation="vertical">
        <include layout="@layout/progressview"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_weight="0.45"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/progress_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="center"
            android:textSize="@dimen/text_normal"
            android:textColor="@color/colorAccent"
            android:text="@string/loading_posts"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_connection_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_phone_connection"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_normal"
            android:gravity="center"
            android:text="@string/cannot_load_posts"/>
    </LinearLayout>

    <!-- No people yet -->
    <!-- **********************************************************************-->
    <TextView
        android:id="@+id/no_posts_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="@dimen/text_normal"
        android:text="@string/no_people"
        android:gravity="center"
        android:visibility="gone"/>

    <!-- List View -->
    <!-- **********************************************************************-->
    <android.support.v7.widget.RecyclerView
    android:id="@+id/list_people"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:listSelector="@android:color/transparent"/>

    <!-- Add Button-->
    <!-- **********************************************************************-->
    <LinearLayout
        android:id="@+id/main_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_bottom_button"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/background_button"
        android:visibility="gone">
        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/text_main_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textColor="@color/text_button"
            android:textAllCaps="false"
            android:text="@string/button_add_people"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_big"/>
    </LinearLayout>
</LinearLayout>