<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myattrs="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <include layout="@layout/toolbar_transparent_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_huge"
            android:text="@string/define_yourself"
            android:typeface="serif"
            android:textColor="@color/White"
            android:layout_marginBottom="40dp"
            android:gravity="center"/>

        <android.support.v7.widget.SearchView
            android:id="@+id/edit_text"
            style="@style/SearchViewEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:textColor="@color/White"/>

        <com.timappweb.timapp.views.HorizontalTagsRecyclerView
            android:id="@+id/selected_tags_profile"
            style="@style/HorizontalTags"
            myattrs:horizontal_tags_text_color="@color/White"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/submit_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">
        <LinearLayout
            android:id="@+id/progress_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:visibility="gone">
            <com.crystal.crystalpreloaders.widgets.CrystalPreloader
                style="@style/ProgressViewSmallWhite"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:gravity="bottom">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="@dimen/text_normal"
                android:textColor="@color/White"
                android:text="@string/well_done"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="@dimen/default_text_padding"
                android:paddingRight="@dimen/default_text_padding"
                android:gravity="center"
                android:textColor="@color/White"
                android:text="@string/edit_first_profile2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/button_submit"
                style="@style/BigButton.White"
                android:text="@string/submit"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>