<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.timappweb.timapp.activities.LoginActivity"
    android:background="@color/background"
    android:id="@+id/action_login">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_above="@+id/skip_loggin_button">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"/>
        <LinearLayout android:id="@+id/sign_up_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/LightGrey"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_create_account_login"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/Black"/>
                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/LightGrey"/>
            </LinearLayout>

            <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical">

                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1" android:singleLine="true" />

                <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" android:text="@string/action_sign_in"
                    android:textStyle="bold" android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp">
                    <View
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/LightGrey"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/or_text_login"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/Black"/>
                    <View
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/LightGrey"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/facebook_button"
                    android:text="@string/action_skip_loggin"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_alignParentBottom="true">
                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_facebook"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textColor="@color/White"
                        android:textSize="@dimen/text_normal"
                        android:text="Connect with Facebook"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_location"/>
                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_hashtag"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/text_huge"
                    android:text="Welcome to TiMapp !"/>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
    <Button android:id="@+id/skip_loggin_button" style="?android:textAppearanceSmall"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/background"
        android:text="@string/action_skip_loggin"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"/>

    <include android:id="@id/toolbar_transparent" layout="@layout/toolbar_transparent" />

</RelativeLayout>

